--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </body>
 
-<p>The town of Lebanon Junciton has  went thru many different ups and downs. The town was once a bustling community complete with a hotel, Catholic grade school, high school and grocery store.  Once the railroad industry died down the community took a hit.  There was a decrease within the population due to a reduction of jobs. Eventually the high school, both groceries and  the local florist closed.  The flood aslo took a big hit to the community.  As more of the older people pass away the town has welcomed in many more renters and there has been a difference in the change of people and atmosphere.</p>
+<p>The town of Lebanon Junciton has  went thru many different ups and downs. The town was once a bustling community complete with a hotel, Catholic grade school, high school and grocery store.  Once the railroad industry died down the community took a hit.  There was a decrease within the population due to a reduction of jobs. Eventually the high school, both groceries and  the local florist closed.  The flood aslo took a big hit to the community.  As more of the older people pass away the town has welcomed in many more renters and there has been a difference in the change of people and atmosphere====.</p>
 
 <h1>Town History</h1>
 <h2>Gallery</h2>
